# semantic_pdf_extraction

./: .gitignore  LICENCE  README.md  config.yaml  pyproject.toml
data/: LICENCE.ground_truth  README.md
extractors/: extract_ocr.py  extract_pdfminer.py  extract_pdfplumber.py  extract_pypdf2.py
layouts/: header_footer.py  layout_header_footer.py  layout_one_column.py  layout_two_column.py  mixed_format.py  one_column.py  side_bar.py  three_col.py  two_col_min.py  two_column.py
models/: base.py  lightgbm_model.py  logistic_regression.py  random_forest.py  xgboost_model.py
scripts/: DB_parse_txt_to_json.py  QE_example.py  analyse_extractor_distribution.py  build_final_training_dataset.py  cluster_extracted_sentences.py  download_wiki.py  embed_extracted_sentences.py  embed_groundtruth_sentences.py  evaluate_doc_semantic_similarity.py  evaluate_model_semantic_score.py  evaluate_sentence_level_model_vs_extractors.py  extract_features.py  generate_extracted_sentence_dfs.py  generate_extracted_sentences.py  generate_gt_sentences.py  generate_pdfs.py  generate_ranking_training_data.py  json_to_DF.py  json_to_GT.py  main.py  match_by_hungarian_algorithm.py  match_clustered_sentences.py  match_sentences_by_similarity.py  merge_matches_with_features.py  process_raw_to_JSON.py  process_sections.py  rebuild_documents.py  rename_and_organise_docbank.py  run_extractors_batch.py  run_model.py  select_sample_txt.py  setup_environment.py  training_data_summary.py
utils/: clustering.py  config.py  data_transformers.py  embedding.py  file_operations.py  flowables.py  layout_parser.py  pdf_utils.py  (+2 more)
(+101 files in other folders)
