[project]
name = "semantic-pdf-extraction"
version = "0.1.0"
description = "ML project focused on semantic similarity of extracted text to PDF original"
authors = [
    {name = "David Evans",email = "kqq507@york.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets (>=3.5.0,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "nltk (>=3.9.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
