[project]
name = "semantic-pdf-extraction"
version = "0.1.0"
description = "ML project focused on semantic similarity of extracted text to PDF original"
authors = [
    {name = "David Evans",email = "kqq507@york.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets (>=3.5.0,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "reportlab (>=4.4.0,<5.0.0)",
    "spacy (>=3.8.5,<4.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "pdfminer-six (==20250327)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "pdfplumber (>=0.11.6,<0.12.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
